--- a/.github/workflows/validador_alertas.yaml
+++ b/.github/workflows/validador_alertas.yaml
@@ -24,9 +24,6 @@ jobs:
     - name: Instalar dependências
       run: pip install pyyaml regex
 
-
-    - name: Verificar diretorio
-      run: ls -lha
     - name: Instalar promtool
       run: |
         wget https://github.com/prometheus/prometheus/releases/latest/download/prometheus-${{ env.PROMETHEUS_VERSION }}.linux-amd64.tar.gz
@@ -35,7 +32,7 @@ jobs:
         rm -fr prometheus-${{ env.PROMETHEUS_VERSION }}.linux-amd64
 
     - name: Validar sintaxe do arquivo de alertas com promtool
-      run: find . -type f -name "*.yaml" -o -name "*.yml" -exec promtool check rules {} +
+      run: find . -type d \( -name "*-dev" -o -name "*-hom" -o -name "*-pro" \) -exec find {} -type f \( -name "*.yaml" -o -name "*.yml" \) -exec promtool check rules {} +
 
     - name: Executar validação de sintaxe com Python
       run: python .github/workflows/validate_alerts.py
