add valida commit message

--- a/.github/workflows/validador_alertas.yaml
+++ b/.github/workflows/validador_alertas.yaml
@@ -49,3 +49,12 @@ jobs:
 
     - name: Executar validação de sintaxe com Python
       run: python .github/workflows/validate_alerts.py
+
+
+    - name: Validate commit message
+      run: |
+        COMMIT_MSG=$(git log --format=%B --no-merges -n 1 ${{ github.event.before }}..${{ github.event.after }})
+        if [[ $COMMIT_MSG == *'email_router'* ]]; then
+          echo "Commit message contem 'email_router'. Por favor remover o termo no commit message."
+          exit 1
+        fi
