--- a/.github/workflows/validador_alertas.yaml
+++ b/.github/workflows/validador_alertas.yaml
@@ -51,9 +51,11 @@ jobs:
       run: python .github/workflows/validate_alerts.py
 
 
-    - name: Validate commit message
+    - name: Verificar conteúdo do commit
       run: |
-        COMMIT_MSG=$(git log --format=%B --no-merges -n 1 ${{ github.event.before }}..${{ github.event.after }})
-        if [[ $COMMIT_MSG == *'email_router'* ]]; then
-          echo "Commit message contem 'email_router'. Por favor remover o termo no commit message."
+        if git log -1 --pretty=format:%B | grep -q "email_router"; then
+          echo "Erro: O termo 'email_router' foi encontrado no conteúdo do commit."
+          exit 1
+        else
+          echo "O termo 'email_route' não foi encontrado. Continuando normalmente."
         fi
