--- a/.github/workflows/validador_alertas.yaml
+++ b/.github/workflows/validador_alertas.yaml
@@ -57,5 +57,5 @@ jobs:
           echo "Erro: O termo 'email_router' foi encontrado no conteúdo do commit."
           exit 1
         else
-          echo "O termo 'email_route' não foi encontrado. Continuando normalmente."
+          echo "O termo 'email_router' não foi encontrado. Continuando normalmente."
         fi
