--- a/alertas-hom/alertas-hom.yaml
+++ b/alertas-hom/alertas-hom.yaml
@@ -25,15 +25,13 @@ groups:
       summary: "Disco quase cheio no {{ $labels.instance }}"
       description: "A capacidade de armazenamento no {{ $labels.instance }} está abaixo de 10% (atual valor: {{ $value }})"
 
-  - alert: DiscoCheio
-    expr: (node_filesystem_free{mountpoint="/"} / node_filesystem_size{mountpoint="/"}) * 100 < 10
-    for: 15m
+  - alert: AltaCargaCPU
+    expr: aws_ebs{account_id="827897982"} > 2.0
+    for: 5m
     labels:
-      severity: critical
+      severity: major
       channel: email_router
-      KB: 8979237
+      email_to: teste@gmail.com
     annotations:
-      alert_group: TestGroup
-      alert_type: DiscoCheio
-      summary: "Disco quase cheio no {{ $labels.instance }}"
-      description: "A capacidade de armazenamento no {{ $labels.instance }} está abaixo de 10% (atual valor: {{ $value }})"
+      summary: "Carga alta de CPU no {{ $labels.instance }}"
+      description: "A carga de CPU no {{ $labels.instance }} está acima de 2.0 (atual valor: {{ $value }})"
