--- a/.github/workflows/validador_alertas.yaml
+++ b/.github/workflows/validador_alertas.yaml
@@ -53,7 +53,7 @@ jobs:
 
     - name: Verificar conteúdo do commit
       run: |
-        if git log -1 --pretty=format:%B | grep -i 'email_router'; then
+        if git diff HEAD^ HEAD | grep -q 'email_router'; then
           echo "Erro: O termo 'email_router' foi encontrado no conteúdo do commit."
           exit 1
         else
