--- a/.github/workflows/validador_alertas.yaml
+++ b/.github/workflows/validador_alertas.yaml
@@ -15,6 +15,8 @@ jobs:
     steps:
     - name: Checkout do repositório
       uses: actions/checkout@v2
+      with:
+        fetch-depth: 2 # Garante que temos histórico suficiente para comparar
 
     - name: Configurar Python
       uses: actions/setup-python@v2
