--- a/.github/workflows/validador_alertas.yaml
+++ b/.github/workflows/validador_alertas.yaml
@@ -15,8 +15,6 @@ jobs:
     steps:
     - name: Checkout do repositório
       uses: actions/checkout@v2
-      with:
-        fetch-depth: 2 # Garante que temos histórico suficiente para comparar
 
     - name: Configurar Python
       uses: actions/setup-python@v2
@@ -55,7 +53,10 @@ jobs:
 
     - name: Verificar conteúdo do commit
       run: |
-        if git diff HEAD^ HEAD | grep -q 'email_router'; then
+        # Extrai mudanças do último commit
+        git diff HEAD~1 HEAD > changes.diff
+        # Verifica se 'email_router' está presente nas mudanças
+        if grep -q 'email_router' changes.diff; then
           echo "Erro: O termo 'email_router' foi encontrado no conteúdo do commit."
           exit 1
         else
