--- a/.github/workflows/validador_alertas.yaml
+++ b/.github/workflows/validador_alertas.yaml
@@ -50,13 +50,13 @@ jobs:
     - name: Executar validação de sintaxe com Python
       run: python .github/workflows/validate_alerts.py
 
-    - name: Extract added lines in the last commit
+    - name: Extract and check added lines in the last commit for "email_router"
       run: |
-        # Extrai apenas as linhas adicionadas no último commit
-        git diff HEAD~ --unified=0 | grep '^\+' | grep -v '^\+\+\+' > added_lines.txt
+        # Extrai linhas adicionadas no último commit, excluindo cabeçalhos de arquivo
+        ADDED_LINES=$(git show --pretty=format: --unified=0 | grep '^+' | grep -v '^+++')
 
-        # Verifica se o arquivo de linhas adicionadas contém 'email_router'
-        if grep -q 'email_router' added_lines.txt; then
+        # Verifica se as linhas adicionadas contêm 'email_router'
+        if echo "$ADDED_LINES" | grep -q 'email_router'; then
           echo "'email_router' found in the added lines of the last commit."
           exit 1
         else
