--- a/alertas-dev/alertas-dev.yaml
+++ b/alertas-dev/alertas-dev.yaml
@@ -17,7 +17,7 @@ groups:
     for: 15m
     labels:
       severity: critical
-      channel: service_now.
+      channel: service_now
       kb: 8979237
     annotations:
       alert_group: TestGroup
