--- a/alertas-dev/alertas-dev.yaml
+++ b/alertas-dev/alertas-dev.yaml
@@ -30,7 +30,7 @@ groups:
     for: 15m
     labels:
       severity: critical
-      channel: service_now
+      channel: email_router
       kb: 8979237
     annotations:
       alert_group: TestGroup
