--- a/.github/workflows/validador_alertas.yaml
+++ b/.github/workflows/validador_alertas.yaml
@@ -53,5 +53,18 @@ jobs:
     - name: Instala dependências
       run: python -m pip install --upgrade pip
 
-    - name: Verifica o termo 'email_router' no último commit
-      run: python .github/workflows/check_email_router.py
+    - name: Verificar 'email_router' no código modificado
+      run: |
+        # Buscar por arquivos modificados que contêm o termo 'email_router'
+        # Esse comando lista arquivos modificados entre o branch base e o head do PR
+        MODIFIED_FILES=$(git diff --name-only ${{ github.base_ref }}...${{ github.head_ref }})
+        echo "Arquivos modificados: $MODIFIED_FILES"
+
+        # Loop pelos arquivos modificados para buscar o termo 'email_router'
+        for file in $MODIFIED_FILES; do
+          if grep -q 'email_router' "$file"; then
+            echo "::error ::Termo 'email_router' encontrado em $file"
+            exit 1
+          fi
+        done
+        echo "Nenhum termo 'email_router' encontrado nos arquivos modificados."
