--- a/.github/workflows/validador_alertas.yaml
+++ b/.github/workflows/validador_alertas.yaml
@@ -56,7 +56,7 @@ jobs:
     - name: Verificar 'email_router' no código modificado
       run: |
         # Lista arquivos modificados no último commit
-        MODIFIED_FILES=$(git diff --name-only HEAD~1 HEAD)
+        MODIFIED_FILES=$(git diff --name-only HEAD~1 -- HEAD)
         echo "Arquivos modificados: $MODIFIED_FILES"
 
         # Loop pelos arquivos modificados para buscar o termo 'email_router'
