--- a/.github/workflows/validador_alertas.yaml
+++ b/.github/workflows/validador_alertas.yaml
@@ -67,6 +67,7 @@ jobs:
         # Verificar se as linhas adicionadas contêm o termo 'email_router'
         if echo "$ADDED_LINES" | grep -q '+      channel: email_router'; then
           echo "::error ::Termo 'email_router' encontrado nas linhas adicionadas."
-          exit 1
+          echo "$ADDED_LINES"
+          #exit 1
         else
           echo "Nenhum termo 'email_router' encontrado nas linhas adicionadas."
