--- a/.github/workflows/validador_alertas.yaml
+++ b/.github/workflows/validador_alertas.yaml
@@ -65,9 +65,10 @@ jobs:
         echo "$ADDED_LINES"
 
         # Verificar se as linhas adicionadas contêm o termo 'email_router'
-        # if echo "$ADDED_LINES" | grep -q '+      channel: email_router'; then
+        if echo "$ADDED_LINES" | grep -q 'email_router'; then
         #   echo "::error ::Termo 'email_router' encontrado nas linhas adicionadas."
         #   echo "$ADDED_LINES"
+          echo "termo email_router foi encontrado"
         #   #exit 1
-        # else
-        #   echo "Nenhum termo 'email_router' encontrado nas linhas adicionadas."
+        else
+          echo "Nenhum termo 'email_router' encontrado nas linhas adicionadas."
