--- a/.github/workflows/validador_alertas.yaml
+++ b/.github/workflows/validador_alertas.yaml
@@ -68,8 +68,8 @@ jobs:
         if echo "$ADDED_LINES" | grep -q 'email_router'; then
         #   echo "::error ::Termo 'email_router' encontrado nas linhas adicionadas."
         #   echo "$ADDED_LINES"
-          echo "termo email_router foi encontrado"
-        #   #exit 1
+          echo "O termo email_router foi encontrado, por favor remover pois esta descontinuado."
+          exit 1
         else
           echo "Nenhum termo 'email_router' encontrado nas linhas adicionadas."
         fi
