--- a/.github/workflows/validador_alertas.yaml
+++ b/.github/workflows/validador_alertas.yaml
@@ -53,10 +53,10 @@ jobs:
     - name: Instala dependências
       run: python -m pip install --upgrade pip
 
-    # - name: Checkout code
-    #   uses: actions/checkout@v2
-    #   with:
-    #     fetch-depth: 0 # Garante o fetch de todo o histórico
+    - name: Checkout code
+      uses: actions/checkout@v2
+      with:
+        fetch-depth: 0 # Garante o fetch de todo o histórico
 
     - name: Verificar 'email_router' apenas nas linhas adicionadas
       run: |
