--- a/.github/workflows/validador_alertas.yaml
+++ b/.github/workflows/validador_alertas.yaml
@@ -64,12 +64,15 @@ jobs:
     #       echo "Nenhum termo 'email_router' encontrado nas linhas adicionadas."
     #     fi
 
-    - name: Extrair linhas modificadas do último commit
+    - name: Verificar 'email_router' apenas nas linhas adicionadas ou modificadas
       run: |
-        # Extrai diferenças do último commit, filtrando especificamente por adições
-        git diff --name-only HEAD~ HEAD | grep -Ev '(^|/)\.[^/]*$' | xargs git diff HEAD~ HEAD -- | grep '^+' | grep -v '^+++' > modified_lines.txt
-        # Verifica se o arquivo modified_lines.txt contém o termo 'email_router'
-        if grep -q 'email_router' modified_lines.txt; then
+        # Utiliza git diff para listar apenas modificações do último commit
+        MODIFIED_LINES=$(git diff --diff-filter=d ORIG_HEAD..HEAD --unified=0 | grep '^\+' | grep -v '^\+\+\+')
+        echo "Linhas adicionadas ou modificadas no último commit:"
+        echo "$MODIFIED_LINES"
+
+        # Verifica se as linhas modificadas contêm o termo 'email_router'
+        if echo "$MODIFIED_LINES" | grep -q 'email_router'; then
           echo "::error::Termo 'email_router' encontrado nas linhas modificadas."
           exit 1
         else
